--- a/style.css
+++ b/style.css
@@ -17,5 +17,97 @@ tlačítko twitter          #1da1f2
 
 body {
   background-color: #bdc3c7;
+  position: relative;
+  margin:0;
+  }
+
+.profil {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  box-shadow: 4px 6px 20px black; 
+}
+
+.hlavicka {
+background-color: #31363b;
+}
+
+.foto {
+  width: 250px;
+  margin:0;
+  padding-bottom: 0;
+}
+
+.logo {
+  background-color: #b92e81;
+  border-radius: 50%;
+  position: absolute;
+	top: 140px;
+  right: 25px;
+}
+
+.obsah {
+  background-color: #31363b;
+  width: 250px;
+  padding: 10px 20px 15px 25px;
+  margin-top:0;
+}
+
+.jmeno {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 25px;
+}
+
+.obsah p {
+  color: rgb(207, 206, 206);
+  width: 200px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 13px;
+
+}
+
+.odkazy {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #31363b; 
+  padding: 0; 
+  margin: 0;
+  width: 250px;
+}
+
+.odkazy a {
+  text-decoration: none; 
+  color: rgb(207, 206, 206);
+  font-size: 13px;
+  font-weight: bold;
+  }
+
+.portfolio {
+  display: inline-block;
+  text-align: center;
+  padding: 10px 30px;
+  width: 100%;
+  border: 1px solid #3f464d;
+} 
+
+.facebook,
+.twitter {
+  display: inline-block;
+  text-align: center;
+  width: 50%;
+  border: 1px solid #3f464d;
+  padding: 10px 30px;
+}
+
+.portfolio:hover {
+  background-color: #e74c3c;
+}
+
+.facebook:hover {
+  background-color: #3b5998;
+}
+
+.twitter:hover {
+  background-color: #1da1f2;
 }
 
